WPF клиент готов

--- a/WpfClient/MainWindow.xaml
+++ b/WpfClient/MainWindow.xaml
@@ -10,7 +10,7 @@
         <ListBox x:Name="MessagesLB" HorizontalAlignment="Left" Height="256" Margin="10,10,0,0" VerticalAlignment="Top" Width="772"/>
         <TextBox x:Name="UserNameTB" HorizontalAlignment="Left" Height="23" Margin="34,304,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="261" RenderTransformOrigin="0.479,0.669"/>
         <TextBox x:Name="MessageTB" HorizontalAlignment="Left" Height="23" Margin="34,358,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="401"/>
-        <Button Content="Отправить" HorizontalAlignment="Left" Margin="641,304,0,0" VerticalAlignment="Top" Width="141" Height="77"/>
+        <Button Content="Отправить" HorizontalAlignment="Left" Margin="641,304,0,0" VerticalAlignment="Top" Width="141" Height="77" Click="Button_Click"/>
 
     </Grid>
 </Window>
